# model

./: .gitignore  README.md  oversee.ipynb  pyproject.toml  run_parallel.py
data/csv/: all_cars.csv  all_reviews.csv
data/raw/: Audi_A3_reviews.json  Audi_Q5_reviews.json  Audi_RS3_reviews.json  BMW_3-Series_reviews.json  BMW_M4_reviews.json  BMW_X5_reviews.json  Ford_Explorer_reviews.json  Ford_F-150_reviews.json  Ford_Mustang_reviews.json  Honda_CR-V_reviews.json  Honda_Civic_reviews.json  Toyota_Corolla_reviews.json  Toyota_RAV4_reviews.json
kbb_scraper/: __init__.py  __main__.py  main.py
kbb_scraper/config/: __init__.py  settings.py  vehicles.py
kbb_scraper/drivers/: __init__.py  driver_setup.py
kbb_scraper/exporters/: __init__.py  csv_exporter.py  db_exporter.py
kbb_scraper/models/: __init__.py  car_specs.py  db_schema.py  review_data.py
kbb_scraper/parsers/: __init__.py  data_parser.py  review_parser.py  value_parser.py
kbb_scraper/scrapers/: __init__.py  bodytype_detector.py  kbb_scraper.py  reviews_scraper.py
kbb_scraper/transformers/: __init__.py  schema_transformer.py
kbb_scraper/utils/: __init__.py  file_handler.py  helpers.py
scripts/: merge_kbb_epa.py  run.txt
